# kamu-cli

./: .copilot-instructions.md  .env  .env.example  .gitignore  .gitmodules  .history  .scalafmt.conf  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPER.md  GLOSSARY.md  LICENSE.txt  Makefile  README.md  TODO.md  build.sbt  clippy.toml  dataSourcePolling.yaml  dataset_root_desc.yaml  dataset_root_desc_example.yaml  deny.toml  flake.nix  log.txt  nextest.toml  repositoryVolumeMap.yaml  rust-toolchain  rustfmt.toml  sandbox.rs  update-non-aws.sh
kamu-adapter-graphql/: Cargo.toml
kamu-adapter-graphql/src/: root.rs  utils.rs
kamu-adapter-graphql/src/mutations/: auth.rs
kamu-adapter-graphql/src/queries/: account.rs  accounts.rs  data.rs  dataset.rs  dataset_data.rs  dataset_metadata.rs  datasets.rs  metadata_block.rs  metadata_chain.rs  mod.rs  search.rs
kamu-adapter-graphql/src/scalars/: account.rs  data_batch.rs  data_query.rs  data_schema.rs  dataset.rs  dataset_id_name.rs  metadata.rs  mod.rs  multihash.rs  odf_generated.rs  pagination.rs  task.rs  transform.rs  types.rs
kamu-adapter-graphql/tests/tests/: mod.rs  test_gql_data.rs  test_gql_datasets.rs  test_gql_metadata_chain.rs  test_gql_search.rs  test_tasks.rs  test_update_schema.rs
kamu-adapter-http/: Cargo.toml
kamu-adapter-http/src/: dataset_protocol_helper.rs  http_server_constants.rs  http_server_dataset_router.rs  http_server_middleware.rs  http_server_simple_transfer_protocol.rs  lib.rs  ws_client_smart_transfer_protocol.rs  ws_common.rs  ws_server_smart_pull_protocol.rs  ws_server_smart_push_protocol.rs  ws_smart_transfer_protocol_axum_server.rs  ws_smart_transfer_protocol_client.rs  ws_smart_transfer_protocol_server.rs  ws_smart_transfer_protocol_tungstenite_client.rs
kamu-adapter-http/src/dataset_resolvers/: dataset_resolver.rs  dataset_resolver_local_repository.rs  mod.rs
kamu-adapter-http/src/messages/: mod.rs  smart_transfer_protocol_messages.rs
kamu-adapter-http/src/simple_protocol/: file_uploader.rs  handlers.rs  mod.rs
kamu-adapter-http/src/smart_protocol/: dataset_helper.rs  errors.rs  messages.rs  mod.rs  phases.rs  ws_axum_server.rs  ws_tungstenite_client.rs
kamu-adapter-http/tests/: mod.rs
kamu-adapter-http/tests/harness/: client_side_harness.rs  common_harness.rs  mod.rs  server_side_harness.rs  server_side_local_fs_harness.rs  server_side_s3_harness.rs  test_api_server.rs
kamu-adapter-http/tests/tests/: mod.rs  test_routing.rs  test_smart_pull.rs  test_smart_push.rs
kamu-cli/: Cargo.toml
kamu-cli/examples/: pull-root-multi.rs  pull-root-single.rs
kamu-cli/src/: app.rs  cli_commands.rs  cli_parser.rs  config.rs  error.rs  lib.rs  main.rs  output_format.rs
kamu-cli/src/commands/: add_command.rs  alias_add_command.rs  alias_delete_command.rs  alias_list_command.rs  common.rs  complete_command.rs  completions_command.rs  config_command.rs  delete_command.rs  depgraph_command.rs  gc_command.rs  init_command.rs  inspect_query_command.rs  inspect_schema_command.rs  lineage_command.rs  list_command.rs  log_command.rs  mod.rs  new_dataset_command.rs  notebook_command.rs  pull_command.rs  pull_images_command.rs  push_command.rs  remote_add_command.rs  remote_delete_command.rs  remote_list_command.rs  rename_command.rs  repository_add_command.rs  repository_delete_command.rs  repository_list_command.rs  reset_command.rs  search_command.rs  set_watermark_command.rs  sql_server_command.rs  sql_server_livy_command.rs  sql_shell_command.rs  sync_from_command.rs  system_api_server_gql_query_command.rs  system_api_server_gql_schema_command.rs  system_api_server_run_command.rs  (+5 more)
kamu-cli/src/explore/: api_server.rs  livy_server_impl.rs  mod.rs  notebook_server_impl.rs  sql_shell_impl.rs  trace_server.rs  web_ui_server.rs
kamu-cli/src/output/: mod.rs  output_config.rs  output_format.rs  records_writers.rs
kamu-cli/src/services/: config_service.rs  gc_service.rs  mod.rs  workspace_service.rs
kamu-cli/tests/: mod.rs  test_new_dataset_command.rs
kamu-cli/tests/tests/: mod.rs  test_add_command.rs  test_api_server_command.rs  test_new_dataset_command.rs  test_pull_command.rs  test_workspace_svc.rs
kamu-cli/tests/utils/: kamu.rs  mod.rs
kamu-core/: Cargo.toml
kamu-core/src/: error.rs  ingest_service_impl.rs  lib.rs  provenance_service_impl.rs  pull_service_impl.rs  push_service_impl.rs  query_service_impl.rs  remote_aliases_registry_impl.rs  remote_repository_registry_impl.rs  reset_service_impl.rs  resource_loader_impl.rs  search_service_impl.rs  sync_service_impl.rs  transform_service_impl.rs  verification_service_impl.rs  workspace_layout.rs
kamu-core/src/domain/: dataset_id.rs  dataset_registry.rs  dataset_repository_utils.rs  engine.rs  engine_provisioner.rs  error.rs  ingest_service.rs  metadata_chain.rs  metadata_repository.rs  mod.rs  provenance_service.rs  pull_service.rs  push_service.rs  query_data_accessor.rs  query_service.rs  remote.rs  remote_aliases.rs  remote_aliases_registry.rs  remote_repository_registry.rs  repository.rs  reset_service.rs  resource_loader.rs  search_service.rs  sync_service.rs  time_interval.rs  transform_service.rs  verification_service.rs
kamu-core/src/engine/: engine_container.rs  engine_odf.rs  engine_provisioner_local.rs  engine_spark.rs  mod.rs
kamu-core/src/infra/: dataset_config.rs  dataset_layout.rs  dataset_registry_impl.rs  dataset_summary.rs  (+23 more)
kamu-core/tests/: mod.rs
opendatafabric/: Cargo.toml  Makefile  build.rs
opendatafabric/flatbuffers/: odf.fbs
opendatafabric/schemas/: engine.proto  odf.fbs
opendatafabric/src/: cid.rs  dataset_id.rs  dataset_identity.rs  dataset_refs.rs  defaults.rs  dtos.rs  dynamic.rs  extra.rs  grammar.rs  lib.rs  manifest.rs  metadata_utils.rs  multicodec.rs  multihash.rs  sha.rs  time_interval.rs
opendatafabric/tests/: mod.rs  test_dataset_id.rs  test_dynamic.rs  test_serde_buffer.rs  test_serde_flatbuffers.rs  test_serde_yaml.rs
tools/: Cargo.toml
tools/src/: create_test_workspace.rs  release.rs
tools/tests/: mod.rs
utils/container-runtime/: Cargo.toml
(+7554 files in other folders)
