[workspace]
members = [
    # Utils
    "src/utils/container-runtime",
    "src/utils/data-utils",
    "src/utils/datafusion-cli",
    "src/utils/enum-variants",
    "src/utils/event-bus",
    "src/utils/event-sourcing",
    "src/utils/event-sourcing-macros",
    "src/utils/internal-error",
    "src/utils/multiformats",
    "src/utils/repo-tools",
    "src/utils/tracing-perfetto",
    # Domain
    "src/domain/opendatafabric",
    "src/domain/core",
    "src/domain/task-system",
    "src/domain/flow-system",
    # Infra
    "src/infra/core",
    "src/infra/ingest-datafusion",
    "src/infra/task-system-inmem",
    "src/infra/flow-system-inmem",
    # Adapters
    "src/adapter/auth-oso",
    "src/adapter/flight-sql",
    "src/adapter/graphql",
    "src/adapter/http",
    "src/adapter/oauth",
    # Apps
    "src/app/cli",
]
resolver = "2"


[workspace.dependencies]
# Utils
container-runtime = { path = "src/utils/container-runtime", default-features = false }
enum-variants = { path = "src/utils/enum-variants", default-features = false }
event-bus = { path = "src/utils/event-bus", default-features = false }
event-sourcing = { path = "src/utils/event-sourcing", default-features = false }
event-sourcing-macros = { path = "src/utils/event-sourcing-macros", default-features = false }
internal-error = { path = "src/utils/internal-error", default-features = false }
multiformats = { path = "src/utils/multiformats", default-features = false }
kamu-data-utils = { path = "src/utils/data-utils", default-features = false }
kamu-datafusion-cli = { path = "src/utils/datafusion-cli", default-features = false }
tracing-perfetto = { path = "src/utils/tracing-perfetto", default-features = false }
# Domain
opendatafabric = { path = "src/domain/opendatafabric", default-features = false }
kamu-core = { path = "src/domain/core", default-features = false }
kamu-task-system = { path = "src/domain/task-system", default-features = false }
kamu-flow-system = { path = "src/domain/flow-system", default-features = false }
# Infra
kamu = { path = "src/infra/core", default-features = false }
kamu-ingest-datafusion = { path = "src/infra/ingest-datafusion", default-features = false }
kamu-task-system-inmem = { path = "src/infra/task-system-inmem", default-features = false }
kamu-flow-system-inmem = { path = "src/infra/flow-system-inmem", default-features = false }
# Adapters
kamu-adapter-auth-oso = { path = "src/adapter/auth-oso", default-features = false }
kamu-adapter-flight-sql = { path = "src/adapter/flight-sql", default-features = false }
kamu-adapter-graphql = { path = "src/adapter/graphql", default-features = false }
kamu-adapter-http = { path = "src/adapter/http", default-features = false }
kamu-adapter-oauth = { path = "src/adapter/oauth", defualt-features = false }

[workspace.package]
version = "0.164.2"
edition = "2021"
homepage = "https://github.com/kamu-data/kamu-cli"
repository = "https://github.com/kamu-data/kamu-cli"
authors = ["Kamu Data Inc. <dev@kamu.dev>"]
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["data", "collaboration", "etl", "pipeline", "provenance", "blockchain"]
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
]
publish = false


[workspace.lints.clippy]
# clippy::all (clippy::сorrectness, clippy::suspicious, clippy::style, clippy::complexity, clippy::perf)
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"

# clippy::pedantic
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
wildcard_imports = "allow"


# clippy::cargo
cargo = { level = "warn", priority = 0 }
multiple_crate_versions = { level = "allow", priority = 1 }


[profile.dev]
# Change this to 1 for faster builds that still preserve enough info for backtraces.
# Use 2 when you need to attach a debugger.
debug = 2


# Emit the line info tables for our crates to produce useful crash reports and backtraces.
# We don't emit info for dependencies as this significantly increases binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
[profile.release.package]
opendatafabric = { debug = 1 }
kamu = { debug = 1 }
kamu-cli = { debug = 1 }


[profile.ci]
inherits = "dev"
# CI builds often are closer to from-scratch builds. Incremental adds an extra
# dependency-tracking overhead and significantly increases the amount of IO and
# the size of ./target, which make caching less effective
# See: https://matklad.github.io/2021/09/04/fast-rust-builds.html#CI-Workflow
incremental = false
# Line info is enough to get good backtraces in CI - we don't need the
# full debugging symbols that are only useful when attaching a debugger.
debug = 1


# Use this section to test or apply emergency ovverides to dependencies
# See: https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html
[patch.crates-io]
# datafusion = { git = 'https://github.com/apache/arrow-datafusion.git', tag = '36.0.0-rc1' }
# datafusion-common = { git = 'https://github.com/apache/arrow-datafusion.git', tag = '36.0.0-rc1' }
