[package]
name = "kamu-adapter-graphql"
version = "0.116.0"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
# Kamu
dill = { workspace = true }
opendatafabric = { path = "../opendatafabric" }
kamu = { path = "../kamu-core" }

# HTTP
# TODO: Remove from this crate (needed by GitHub auth)
reqwest = { workspace = true, features = ["json"] }

# GraphQL
async-graphql = { workspace = true, features = ["chrono", "url", "apollo_tracing"] }

# Utils
indoc = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }  # TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
