[package]
name = "kamu-adapter-graphql"
version = "0.126.1"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
publish = false


[lib]
doctest = false


[features]
skip_docker_tests = []


[dependencies]
dill = { version = "0.5" }
opendatafabric = { version = "0.126.1", path = "../opendatafabric" }
kamu = { version = "0.126.1", path = "../kamu-core" }

async-graphql = { version = "*", features = ["chrono", "url", "apollo_tracing"] }
chrono = "0.4"
datafusion = "25"  # TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
futures = "0.3"
indoc = "2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }  # TODO: Remove from this crate (needed by GitHub auth)
serde = "1"
serde_json = "1"
tracing = "0.1"


[dev-dependencies]
env_logger = "0.10"
tempfile = "3"
tokio = { version = "1", default-features = false, features = [] }
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
