[package]
name = "kamu-adapter-http"
version = "0.115.0"
authors = ["Sergei Zaychenko <szaychenko@kamu.dev>"]
edition = "2021"

[lib]
doctest = false

[features]
skip_docker_tests = []

[dependencies]
# Kamu
dill = ">= 0.5.0"
opendatafabric = { path = "../opendatafabric" }
kamu = { path = "../kamu-core" }
container-runtime = { path = "../utils/container-runtime" }

# HTTP
tower = { version = "*" }
axum = { version = "*", features = ["ws", "headers"] }
axum-extra = { version = "*", features = ["async-read-body"] }
reqwest = { version = "*", features = ["json"] }

# IO
futures = "*"
tokio = { version = "*"}
tokio-stream = { version = "*" }
tokio-util = { version = "*", features=["codec", "compat", "io"] }
tokio-tungstenite = { version = "*" }
bytes = "*"
flate2 = "*"  # GZip decoder
tar = "*" 

# Utils
async-trait = "*"
chrono = { version = "*", features = ["serde"] }
url = { version = "*", features = ["serde"] }
thiserror = "*"  # Structured error derivations
serde = "*"
serde_json = "*"
tracing = "*"

[dev-dependencies]
tempfile = "*"
env_logger = "*"
test-log = { version = "*", features = ["trace"] }
tracing-subscriber = { version = "*", features = ["env-filter"] }
hyper = "*"
tower = { version = "*" }
tower-http = { version = "*", features = ["trace", "cors"] }
serde = { version = "*", features = ["derive"] }
