[package]
name = "kamu-adapter-http"
version = "0.117.0"
authors = ["Sergei Zaychenko <szaychenko@kamu.dev>"]
edition.workspace = true
publish = false

[lib]
doctest = false

[features]
skip_docker_tests = []

[dependencies]
# Kamu
dill = { workspace = true }
opendatafabric = { path = "../opendatafabric" }
kamu = { path = "../kamu-core" }
container-runtime = { path = "../utils/container-runtime" }

# HTTP
tower = { workspace = true }
axum = { workspace = true, features = ["ws", "headers"] }
axum-extra = { workspace = true, features = ["async-read-body"] }
reqwest = { workspace = true, features = ["json"] }

# IO
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features=["codec", "compat", "io"] }
tokio-tungstenite = { version = "0.18" }
bytes = { workspace = true }
flate2 = "1"  # GZip decoder
tar = "0.4" 

# Utils
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
serde = { workspace = true, features = ["derive"] }
fs_extra = "1.3"  # Recursive folder copy
