[package]
name = "kamu-adapter-http"
version = "0.125.1"
authors = ["Sergei Zaychenko <szaychenko@kamu.dev>"]
edition.workspace = true
publish = false


[lib]
doctest = false


[features]
skip_docker_tests = []


[dependencies]
dill = "0.5"
opendatafabric = { version = "0.125.1", path = "../opendatafabric" }
kamu = { version = "0.125.1", path = "../kamu-core" }
container-runtime = { version = "0.125.1", path = "../utils/container-runtime" }

axum = { version = "0.6", features = ["ws", "headers"] }
axum-extra = { version = "0.7", features = ["async-read-body"] }
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"                                                           # GZip decoder
futures = "0.3"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
serde = "1"
serde_json = "1"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "compat", "io"] }
tokio-tungstenite = "0.18"
tower = "0.4"
tracing = "0.1"
url = { version = "2", features = ["serde"] }


[dev-dependencies]
env_logger = "0.10"
fs_extra = "1.3"                                                    # Recursive folder copy
serde = { version = "1", features = ["derive"] }
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
rand = "0.8"
sha3 = "0.10"
