[package]
name = "kamu-cli"
version = "0.110.0"
description = "Decentralized data management tool"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE.txt"
homepage = "https://github.com/kamu-data/kamu-cli"
repository = "https://github.com/kamu-data/kamu-cli"
keywords = ["cli", "data", "collaboration", "pipeline", "management", "provenance"]
categories = ["command-line-utilities"]

[lib]
doctest = false

[features]
default = []
web-ui = []
skip_docker_tests = []

[dependencies]
dill = "~0.3"
# dill = { path = "../../dill" }
opendatafabric = { path = "../opendatafabric" }
kamu = { path = "../kamu-core" }
kamu-adapter-graphql = { path = "../kamu-adapter-graphql" }
container-runtime = { path = "../utils/container-runtime" }

# CLI
read_input = "*"  # Basic user input
chrono-humanize = "*"  # Human readable durations
clap = "*"
clap_complete = "*"
console = "*"  # Terminal colors
humansize = "*"  # Human readable data sizes
indicatif = "*"  # Progress bars and spinners
minus = { version = "= 5.0.3", features = ["static_output", "search"] }  # Terminal paginator # TODO: https://github.com/arijit79/minus/issues/78
num-format = "*"  # Human-readable number formatting
prettytable-rs = "*"  # ASCII table formatting
webbrowser = "*"  # For opening URLs in default system browser

# API / GraphQL
http = "*"
hyper = "*"
tower = { version = "*" }
tower-http = { version = "*", features = ["trace", "cors"] }
axum = { version = "*" }
async-graphql = { version = "*", features = ["chrono", "url", "apollo_tracing"] }
async-graphql-axum = "*"
serde_json = "*"

# Web UI
rust-embed = { version = "*", features = ["interpolate-folder-path", "compression"] }
mime = "*"
mime_guess = "*"

# Config
merge = "*"
serde = { version = "*", features = ["derive"] }
serde_with = "*"
serde_yaml = "*"
duration-string = { version = "*", features = ["serde"] }

# Tracing / logging / telemetry
tracing = "*"
tracing-appender = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-log = "*"
tracing-bunyan-formatter = "*"

# Utils
async-trait = "*"
chrono = "*"
cfg-if = "*"  # Conditional compilation
glob = "*"  # Used for path completions
datafusion = "16"
dirs = "*"
futures = "*"
indoc = "*"
itertools = "*"
libc = "*"  # Signal names
regex = "*"
shlex = "*"  # Parsing partial input for custom completions
signal-hook = "*"  # Signal handling
tokio = { version = "*", features = [] }
tempfile = "*"
thiserror = "*"  # Structured error derivations
url = "*"
urlencoding = "*"


[target.'cfg(unix)'.dependencies]
users = "*"  # For getting uid:gid


[dev-dependencies]
rand = "^0.8"
indoc = "*"  # Compile-time unindent
env_logger = "*"
test-log = { version = "*", features = ["trace"] }
